vlib/v/checker/tests/chan_incompatible_type_err.vv
struct Foo {}

fn main() {
	ch := chan Foo{}
	foo := Foo{}
	ch <- &foo
}
